--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "join-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "lib/jui-ui.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-theme": "gulp build --gulpfile packages/theme-default/gulpfile.js && cp-cli packages/theme-default/lib lib/theme-default",
+    "build-lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "qrcodejs2": "0.0.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -18,6 +22,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
