--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "join-ui",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "lib/jui-ui.umd.min.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build-theme": "gulp build --gulpfile packages/theme-default/gulpfile.js && cp-cli packages/theme-default/lib lib/theme-default",
-    "build-lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js"
+    "build-lib": "vue-cli-service build --target lib --name join-ui --dest lib ./index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
