--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "join-ui",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "main": "lib/jui-ui.umd.min.js",
+  "author": "santiago_fan <464884785@qq.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build-theme": "gulp build --gulpfile packages/theme-default/gulpfile.js && cp-cli packages/theme-default/lib lib/theme-default",
-    "build-lib": "vue-cli-service build --target lib --name join-ui --dest lib ./index.js"
+    "build-lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
