--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:docs": "vue-cli-service build",
+    "build:entry": "node build/build-entry.js ",
     "lint": "vue-cli-service lint",
     "build-theme": "gulp build --gulpfile packages/theme-default/gulpfile.js && cp-cli packages/theme-default/lib lib/theme-default",
     "lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.12.0",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.10"
   },
@@ -24,10 +24,16 @@
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.2",
+    "clipboard": "^2.0.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "highlight.js": "^9.15.10",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-decorate": "^1.2.2",
+    "markdown-it-task-checkbox": "^1.0.6",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
