--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-markdown-loader": "^2.4.1",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
