--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -25,6 +25,11 @@
         "desc": "开发指南"
       },
       {
+        "name": "plan",
+        "path": "/plan",
+        "desc": "开发计划"
+      },
+      {
         "name": "index",
         "path": "/index",
         "type": "pages"
