--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -50,10 +50,11 @@
             "path": "/sku"
           },
           {
-            "desc": "背景色选择器",
+            "desc": "背景颜色选择器",
             "name": "BgSelector",
             "path": "/BgSelector"
           }
+          
         ]
       }
     ]
