--- a/package.json
+++ b/package.json
@@ -2,34 +2,34 @@
   "name": "join-ui",
   "version": "0.1.13",
   "private": false,
-  "main": "lib/join-ui.umd.min.js",
   "author": "santiago_fan <464884785@qq.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "build:docs": "vue-cli-service build",
     "build:entry": "node build/build-entry.js ",
-    "publish:docs": "node build/publish-docs.js",
-    "new:comp": "node build/create-comp.js && node build/build-entry.js",
     "del:comp": "node build/delete-comp.js && node build/build-entry.js",
-    "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js"
+    "lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js",
+    "new:comp": "node build/create-comp.js && node build/build-entry.js",
+    "publish:docs": "node build/publish-docs.js"
   },
+  "main": "lib/join-ui.umd.min.js",
   "dependencies": {
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
     "clipboard": "^2.0.6",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^2.2.0",
     "highlight.js": "^9.18.1",
     "markdown-it-container": "^2.0.0",
