--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "join-ui",
-  "version": "0.1.26",
+  "version": "0.1.28",
   "private": false,
   "author": "santiago_fan <464884785@qq.com>",
   "scripts": {
@@ -11,14 +11,12 @@
     "build:entry": "node build/build-entry.js",
     "clean": "rimraf lib",
     "build:theme": "gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
-    "build:lib": "node build/build-lib.js",
-    "build:lib2": "npm run clean && webpack --config config/webpack.conf.js && webpack --config config/webpack.common.js && webpack --config config/webpack.component.js && npm run build:theme",
+    "lib": "npm run clean && webpack --config config/webpack.conf.js && webpack --config config/webpack.common.js && webpack --config config/webpack.component.js && npm run build:theme",
     "new:comp": "node build/create-comp.js && node build/build-entry.js",
     "del:comp": "node build/delete-comp.js && node build/build-entry.js",
-    "lib": "vue-cli-service build --target lib --name join-ui --dest lib packages/index.js",
     "publish:docs": "node build/publish-docs.js"
   },
-  "main": "join-ui.common.js",
+  "main": "lib/join-ui.common.js",
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
