--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -53,6 +53,11 @@
             "desc": "背景颜色选择器",
             "name": "BgSelector",
             "path": "/BgSelector"
+          },
+          {
+            "desc": "svg 图标",
+            "name": "SvgIcon",
+            "path": "/SvgIcon"
           }
           
         ]
