--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^2.2.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^4.1.0",
     "highlight.js": "^9.18.1",
     "markdown-it-container": "^2.0.0",
     "markdown-it-decorate": "^1.2.2",
@@ -43,16 +47,13 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "svg-sprite-loader": "^5.0.0",
     "uppercamelcase": "^3.0.0",
     "vue-loader": "^15.9.2",
     "vue-markdown-loader": "^2.4.1",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
-    "webpack-cli": "^3.3.11",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-sass": "^4.1.0"
+    "webpack-cli": "^3.3.11"
   },
   "eslintConfig": {
     "root": true,
