--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -34,20 +34,10 @@
       {
         "desc": "基础组件",
         "items": [
-        ]
-      },
-      {
-        "desc": "拓展组件",
-        "items": [
           {
             "desc": "二维码",
             "name": "qrcode",
             "path": "/qrcode"
-          },
-          {
-            "desc": "SKU 商品规格",
-            "name": "sku",
-            "path": "/sku"
           },
           {
             "desc": "背景颜色选择器",
@@ -59,7 +49,51 @@
             "name": "SvgIcon",
             "path": "/SvgIcon"
           }
-          
+        ]
+      },
+      {
+        "desc": "拓展组件",
+        "items": [
+          {
+            "desc": "SKU 商品规格",
+            "name": "sku",
+            "path": "/sku"
+          }
+        ]
+      },
+      {
+        "desc":"资源管理组件",
+        "items":[
+          {
+            "desc": "文件选择",
+            "name": "rm-file",
+            "path": "/rm-file"
+          }
+        ]
+      },
+      {
+        "desc":"设计组件",
+        "items":[
+          {
+            "desc": "轮播组件",
+            "name": "wg-banner",
+            "path": "/wg-banner"
+          },
+          {
+            "desc": "产品列表",
+            "name": "wg-goods",
+            "path": "/wg-goods"
+          },
+          {
+            "desc": "产品搜索",
+            "name": "wg-search",
+            "path": "/wg-search"
+          },
+          {
+            "desc": "辅助空白",
+            "name": "wg-blank",
+            "path": "/wg-blank"
+          }
         ]
       }
     ]
