--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -48,6 +48,11 @@
             "desc": "svg 图标",
             "name": "SvgIcon",
             "path": "/SvgIcon"
+          },
+          {
+            "desc": "标题栏",
+            "name": "TitleBar",
+            "path": "/TitleBar"
           }
         ]
       },
