--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "join-ui",
-  "version": "0.1.58",
+  "version": "0.2.0",
   "private": false,
-  "author": "santiago_fan <464884785@qq.com>",
+  "author": "santiago_fan <san_fan5@qq.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,7 +19,7 @@
   "main": "lib/join-ui.common.js",
   "dependencies": {
     "clipboard": "^2.0.6",
-    "element-ui": "^2.14.1",
+    "element-ui": "^2.15.7",
     "qrcodejs2": "0.0.2",
     "vue": "^2.6.12"
   },
