--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "markdown-it-container": "^2.0.0",
     "markdown-it-decorate": "^1.2.2",
     "markdown-it-task-checkbox": "^1.0.6",
-    "node-sass": "^4.14.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.45.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
     "svg-sprite-loader": "^5.2.1",
