--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "join-ui",
   "version": "0.3.1",
   "private": false,
-  "author": "santiago_fan <san_fan5@qq.com>",
+  "author": "santiago_fan <san_fan@qq.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
