--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -15,7 +15,7 @@
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^7.0.1",
         "gulp-cssmin": "^0.2.0",
-        "gulp-sass": "^4.1.0"
-    },
-    "dependencies": {}
+        "gulp-sass": "^5.1.0",
+        "sass": "^1.69.1"
+    }
 }
